# Resume_AI_Bot_v1

./: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
app/api/dependencies/: database.py
app/api/routes/: __init__.py  candidates.py  chat.py  exports.py  ingestion.py  notes.py  search.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/migrations/versions/: 0001_initial.py
app/db/models/: __init__.py  base.py  entities.py
app/db/repositories/: candidate_repository.py  ingestion_repository.py
app/integrations/openai/: client.py
app/integrations/qdrant/: client.py
app/schemas/: candidate.py  chat.py  common.py  export.py  ingestion.py  jd.py  search.py
app/services/chat/: chat_service.py
app/services/export/: export_service.py
app/services/extraction/: resume_extractor.py
app/services/ingestion/: ingestion_service.py
app/services/jd/: jd_parser.py
app/services/parsing/: document_parser.py
app/services/ranking/: ranking_service.py
app/services/search/: search_service.py
app/tests/: conftest.py
app/tests/e2e/: test_chat_flow.py
app/tests/integration/: test_ingestion_pipeline.py  test_notes_and_export.py
app/tests/unit/: test_document_parser.py  test_extraction.py  test_jd_parser.py  test_ranking_service.py
app/ui/: streamlit_app.py
app/utils/: deterministic_extraction.py  text.py
docker/: Dockerfile
scripts/: reindex.py  seed_sample_data.py
