[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-intelligence-platform"
version = "0.1.0"
description = "Enterprise-grade internal recruiting intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI Codex"}]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "streamlit>=1.42.0,<2.0.0",
  "sqlalchemy>=2.0.32,<3.0.0",
  "alembic>=1.13.2,<2.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "openai>=1.40.0,<2.0.0",
  "qdrant-client>=1.10.1,<2.0.0",
  "pymupdf>=1.24.9,<2.0.0",
  "python-docx>=1.1.2,<2.0.0",
  "rapidfuzz>=3.9.6,<4.0.0",
  "pandas>=2.2.2,<3.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "structlog>=24.4.0,<25.0.0",
  "orjson>=3.10.7,<4.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "requests>=2.32.3,<3.0.0",
  "email-validator>=2.2.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
  "faker>=26.2.0,<27.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]

[tool.ruff]
line-length = 100
